# docker-pdf2gdocs

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  manifest.yml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: main.yml
pdf2gdocs/: pdf2gdocs.py
