[metadata]
name = pdf2gdocs
version = attr: pdf2gdocs.__version__
description = PDF to Google Docs
author = Jay MOULIN
url = https://github.com/femtopixel/docker-pdf2gdocs
license = Copyright
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Natural Language :: English
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
python_requires = >=3
